--- a/app/src/main/res/layout/item_part.xml
+++ b/app/src/main/res/layout/item_part.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:elevation="4dp"
+    card_view:cardElevation="4dp"
+    card_view:cardCornerRadius="8dp"
     android:padding="8dp">
 
     <LinearLayout
@@ -32,5 +34,19 @@
             android:text="@string/bad_detail_text"
             android:textColor="@android:color/holo_red_dark"
             android:visibility="gone" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button_edit_part"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="@string/edit_text"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
